--- a/config/literature.toml
+++ b/config/literature.toml
@@ -1,42 +1,58 @@
 [Default]
-
-	model="logarithmic"
-
-	[Default.metadata]
-	samplerate=32000
-	frequency=8000
-
-	[Default.preprocessing]
-	window="hanning"
-	duration=60
-	sample_length=5
-	sample_number=''
-	overlap=0.5
-	
-	[Default.parameters]
-	a = 78
-	b = 1.5
-	c = 1
-
-
+model = "logarithmic"
 
 [Pensieri]
+model = "quadratic"
 
-	model="quadratic"
+[User_Pensieri]
+model = "quadratic"
 
-	[Pensieri.metadata]
-	samplerate=100000
-	frequency=8000
+[Default.metadata]
+samplerate = 32000
+frequency = 8000
 
-	[Pensieri.preprocessing]
-	window="hanning"
-	duration=4.5
-	sample_length=0.01024
-	sample_number=8
-	overlap=0.2
-	
-	[Pensieri.parameters]
-	a = 0.044642
-	b = -3.2917
-	c = 63.016
-	d = 0
+[Default.preprocessing]
+window = "hanning"
+duration = 60
+sample_length = 5
+sample_number = ""
+overlap = 0.5
+
+[Default.parameters]
+a = 78
+b = 1.5
+c = 1
+
+[Pensieri.metadata]
+samplerate = 100000
+frequency = 8000
+
+[Pensieri.preprocessing]
+window = "hanning"
+duration = 4.5
+sample_length = 0.01024
+sample_number = 8
+overlap = 0.2
+
+[Pensieri.parameters]
+a = 0.044642
+b = -3.2917
+c = 63.016
+d = 0
+
+[User_Pensieri.metadata]
+samplerate = 100000
+frequency = 8000
+
+[User_Pensieri.preprocessing]
+window = "hanning"
+duration = 4.5
+sample_length = 0.01024
+sample_number = 8
+overlap = 0.2
+
+[User_Pensieri.parameters]
+a = "0.014130970528374327"
+b = "-0.8019290820387672"
+c = "43.62024217717136"
+d = "3.7352202776912433"
